# Vonage-Video-Linux-Screen-Share-Sample-with-OpenCV-Camera

./: README.md
common/src/: renderer.cpp  renderer.h
src/: CMakeLists.txt  callbacks.cpp  custom_capture_callbacks.cpp  main.cpp  screen_capture.cpp  screen_capture.h
